# Pisces_CRM

./: README.md
Application Folder/: Pieces.docx  ai_processing.py  app.py  auth.py  build.sh  check_db_url.py  data_input.py  initialize_db.py  insurance_integration.py  main.py  models.py  pyproject.toml  replit.nix  replit_zip_error_log.txt  reporting.py  requirements.txt  routes.py  setup_db.py  test_flask.py  utils.py  workflow.py
Application Folder/static/: manifest.json  service-worker.js
Application Folder/static/css/: custom.css
Application Folder/static/js/: app.js
Application Folder/templates/: base.html  dashboard.html  index.html  inspection.html  login.html  mobile.html  mobile_inspection.html  mobile_inspections.html  mobile_new_inspection.html  report.html
